--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.jpa.show-sql=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
