Update some configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
-spring.datasource.username=postgres
-spring.datasource.password=1405
+#spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
+spring.datasource.url=jdbc:postgresql://postgres:rZdSx7WbUCpo9AX0ZZSZ@containers-us-west-47.railway.app:6371/railway
+#spring.datasource.username=postgres
+#spring.datasource.password=1405
 spring.jpa.show-sql=true
 
 ## Hibernate Properties
