Update some configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
 spring.datasource.url=jdbc:postgresql://postgres:rZdSx7WbUCpo9AX0ZZSZ@containers-us-west-47.railway.app:6371/railway
-#spring.datasource.username=postgres
+spring.datasource.username=postgres
+spring.datasource.password=rZdSx7WbUCpo9AX0ZZSZ
 #spring.datasource.password=1405
 spring.jpa.show-sql=true
 
@@ -13,4 +14,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 
 #server.port=8081
+
+#DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+#PGDATABASE=railway
+#PGHOST=containers-us-west-47.railway.app
+#PGPASSWORD=rZdSx7WbUCpo9AX0ZZSZ
+#PGPORT=6371
+#PGUSER=postgres
 
