--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
-spring.datasource.url=jdbc:postgresql://postgres:rZdSx7WbUCpo9AX0ZZSZ@containers-us-west-47.railway.app:6371/railway
+spring.datasource.url=jdbc:postgresql://containers-us-west-47.railway.app:6371/railway
 spring.datasource.username=postgres
 spring.datasource.password=rZdSx7WbUCpo9AX0ZZSZ
 #spring.datasource.password=1405
