--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,22 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://containers-us-west-47.railway.app:6371/railway
 spring.datasource.username=postgres
 spring.datasource.password=rZdSx7WbUCpo9AX0ZZSZ
+
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
 #spring.datasource.password=1405
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 
 #server.port=8081
 
