--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://containers-us-west-47.railway.app:6371/railway
 spring.datasource.username=postgres
 spring.datasource.password=rZdSx7WbUCpo9AX0ZZSZ
