--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:postgresql://containers-us-west-98.railway.app:6017/railway
 spring.datasource.username=postgres
 spring.datasource.password=yOQHnk0MqY8lsDH78UFI
+
+#JWT
+mycinema.app.jwtSecret= mycinemaSecretKey
+mycinema.app.jwtExpirationMs= 86400000
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
 #spring.datasource.password=1405
