Update minor MyCinema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create-drop
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+#Railway Database
 spring.datasource.url=jdbc:postgresql://containers-us-west-98.railway.app:6017/railway
 spring.datasource.username=postgres
 spring.datasource.password=yOQHnk0MqY8lsDH78UFI
@@ -10,17 +7,20 @@ spring.datasource.password=yOQHnk0MqY8lsDH78UFI
 mycinema.app.jwtSecret= mycinemaSecretKey
 mycinema.app.jwtExpirationMs= 86400000
 
+#LocalHost
 #spring.datasource.url=jdbc:postgresql://localhost:5432/mycinema
+#spring.datasource.username=postgres
 #spring.datasource.password=1405
-#spring.jpa.show-sql=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create-drop
 
 #server.port=8081
 
